--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body{
     height: 100%;
 }
 body{
-    background-color: gray;
+    background-color: red;
     -webkit-user-select: none;
     user-select: none;
     display: flex;
